2013-02-05 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* integria_demo.sql: Added fields 'num_employee' in tusuario, added
	'last_stat_check' and 'closed_by' in tincidencia.

2013-02-05  Vanessa Gil <vanessa.gil@artica.es>

	* integria_db.sql
	  extras/migrate.sql
	  godmode/usuarios/configurar_usuarios.php
	  include/functions_incidents.php: Added field 'num_employee'
	to 'tusuario'.

2013-02-04  Vanessa Gil <vanessa.gil@artica.es>

	* godmode/setup/incidents_setup.php
	  godmode/setup/inventories_setup.php
	  godmode/setup/setup.php
	  godmode/setup/setup_mail.php
	  godmode/setup/setup_mailtemplates.php
	  godmode/setup/setup_visual.php
	  godmode/setup/setup_pandora.php
	  godmode/setup/setup_auth.php
	  operation/side_menu.php
	  operation/incidents/incident.php: Changed links to tabs
	and remove to menu.

	* operation/incidents/incident_detail.php
	  operation/incidents/incident.php
	  operation/incidents/incident_type_field.php: Changed fields
	order and fixed several bugs.

	* include/languages/date_en_GB.js
	  images/email_edit.png
	  images/pandora.ico: Added files.

2013-02-01  Sancho Lerena <slerena@artica.es>

	* operation/download/browse.php: FIxed ownload
	pagination.

2013-02-01  Vanessa Gil <vanessa.gil@artica.es>

	* godmode/setup/incidents_setup.php
	  godmode/setup/inventories_setup.php
	  godmode/setup/setup.php
	  godmode/setup/setup_mail.php
	  godmode/setup/setup_mailtemplates.php
	  godmode/setup/setup_visual.php
	  operation/side_menu.php
	  operation/incidents/incident.php: Move links to tabs.

	* operation/projects/task_planning.php: Removed 'add task'.

2013-01-31  Vanessa Gil <vanessa.gil@artica.es>

	* integria_db.sql
	  operation/incidents/type_detail.php
	  operation/incidents/incident_type_field.php
	  operation/incidents/incident_detail.php
	  include/functions_form.php
	  include/functions_incidents.php
	  include/functions_ui.php
	  include/js/integria_incident_search.js