@@ -65,6 +65,25 @@ if ($config["error_log"] == 1){
 	ini_set("error_log", $config["homedir"]."/integria.log");
 }
 
+global $develop_bypass;
+/* Help to debug problems. Override global PHP configuration */
+if (!isset($develop_bypass)) $develop_bypass = 0;
+
+if ($develop_bypass) {
+
+	// Develop mode, show all notices and errors on Console (and log it)
+	if (version_compare(PHP_VERSION, '5.3.0') >= 0)
+	{
+		error_reporting(E_ALL & ~E_DEPRECATED);
+	}
+	else
+	{
+		error_reporting(E_ALL);
+	}
+	ini_set("display_errors", 1);
+
+}
+
 $l10n = NULL;
 
 session_start();
